--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,22 @@
 # ใช้ base image ของ Python
 FROM python:3.10-slim
 
-# กำหนดโฟลเดอร์ทำงานภายใน container
-WORKDIR /app
+# [แก้ไข] เปลี่ยน Workdir เป็น /code เพื่อความชัดเจน
+WORKDIR /code
 
-# คัดลอก requirements.txt ก่อน
-COPY app/requirements.txt .
+# คัดลอก requirements.txt (ไฟล์นี้อยู่ในระดับเดียวกับ Dockerfile)
+COPY requirements.txt .
 
 # ติดตั้ง dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# คัดลอกโค้ดทั้งหมดในโฟลเดอร์ app
-COPY app/ .
+# [!!! นี่คือจุดที่แก้ไขหลัก !!!]
+# คัดลอกโฟลเดอร์ "app" ทั้งหมดในเครื่อง
+# ไปไว้ใน container ในชื่อ "app"
+# (จะกลายเป็น /code/app)
+COPY ./app /code/app
 
-# รัน FastAPI
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# [!!! นี่คือจุดที่แก้ไขหลัก !!!]
+# สั่ง Uvicorn ให้รัน "app.main:app" (โมดูล 'main' ในแพ็คเกจ 'app')
+# ไม่ใช่แค่ "main:app"
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
