--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -6,8 +6,13 @@ services:
     container_name: medicy_backend
     ports:
       - "8000:8000"
+    
+    # 🔽🔽🔽 [จุดแก้ไขที่ 1] 🔽🔽🔽
+    # เปลี่ยน 'depends_on' ธรรมดา ให้เป็นแบบที่รอ "healthcheck"
     depends_on:
-      - medicy_db
+      medicy_db:
+        condition: service_healthy # (รอจนกว่า medicy_db จะ healthy)
+        
     environment:
       - DB_HOST=medicy_db
       - DB_PORT=3306
@@ -23,3 +28,12 @@ services:
       MYSQL_DATABASE: medicy
     ports:
       - "3307:3306"
+      
+    # 🔽🔽🔽 [จุดแก้ไขที่ 2] 🔽🔽🔽
+    # เพิ่ม "healthcheck" เพื่อให้ Docker รู้ว่า
+    # MySQL พร้อมใช้งานจริงๆ หรือยัง (โดยการ ping)
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost", "-u", "root", "-p${MYSQL_ROOT_PASSWORD}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
